@@ -19,300 +19,403 @@ public class EasyAIStrategy implements AIStrategy {
 
     private final GameRules rules = new GameRules();
 
+    // hyperparamter tuning 
+    // adjust these to change how aggressively the AI weights each factor
+
+    /** Multiplier for raw prestige points when scoring a card. */
+    private static final double WEIGHT_POINTS        = 5.0; //4.0
+
+    /** Multiplier for how useful a card's bonus color is toward nobles. */
+    private static final double WEIGHT_NOBLE_SYNERGY  = 1.5; //3.0
+
+    /** Multiplier for how useful a card's bonus is toward future purchases. */
+    private static final double WEIGHT_ENGINE_VALUE   = 0.5; //1.5
+
+    /** Penalty multiplier per gem of deficit (how far away from buying). */
+    private static final double WEIGHT_DEFICIT_PENALTY = 1.5; //1.0
+
+    /** Minimum points for a card to be considered worth reserving. */
+    private static final int RESERVE_MIN_POINTS = 3; //3.0
+
+    /** Number of top target cards considered when picking gems. */
+    private static final int GEM_TARGET_COUNT = 2; //3.0
+
+
     /**
-     * Decides the AI's main turn action using a simple priority chain.
+     * Main decision loop
      *
-     * Step 1: Try to purchase the best affordable card from the market or
-     *         reserved hand (highest points, tie-break lowest total cost).
-     * Step 2: If nothing affordable and the AI build some gems collection (gems > 3),
-     *         reserve the highest-value visible card with >= 3 prestige points
-     * Step 3: Otherwise, take gems toward the closest-to-affordable card.
-     *
-     * @param state the current game state
-     * @param self  the AI's Player entity
-     * @return an AIAction describing what to do this turn
+     *  1. Buy the best affordable card (scored by points + noble synergy
+     *     + engine value, penalised by cost).
+     *  2. Reserve a high-value card if:
+     *       the gold token would let us buy it next turn, OR
+     *       it is a high-point card worth locking away.
+     *  3. Take gems that overlap the deficits of our top target cards.
+     * 
+     * @param state the current gamestate
+     * @param self the AI player 
+     * @return an AIAction deciding the action of the bot
      */
     @Override
-    public AIAction decideAction(GameState state, Player self){
+    public AIAction decideAction(GameState state, Player self) {
 
-        Card bestCard = findBestAffordableCard(state, self);
-        if(bestCard != null){
-            boolean fromReserved = self.getReservedCards().contains(bestCard);
-            String desc = String.format("Purchase a card (Level %d, %d pts)",
-             bestCard.getLevel(), bestCard.getPoints());
-            return new AIAction(ActionType.PURCHASE_CARD, bestCard,
-                fromReserved, null, desc);
+        // ── Step 1: purchase ────────────────────────────────────────
+        Card bestBuy = findBestAffordableCard(state, self);
+        if (bestBuy != null) {
+            boolean fromReserved = self.getReservedCards().contains(bestBuy);
+            String desc = String.format("Purchase card (Lv%d, %dpts, %s bonus)",
+                    bestBuy.getLevel(), bestBuy.getPoints(), bestBuy.getBonus());
+            return new AIAction(ActionType.PURCHASE_CARD, bestBuy,
+                    fromReserved, null, desc);
         }
 
-        if (rules.canReserveCard(self) && self.getGems().getTotalCount() >= 3) {
-            Card bestReserve = findBestReservableCard(state);
-            if (bestReserve != null) {
-                String desc = String.format("Reserve a card");
-                return new AIAction(ActionType.RESERVE_CARD, bestReserve,
-                    false, null, desc);
+        // ── Step 2: reserve ─────────────────────────────────────────
+        if (rules.canReserveCard(self)) {
+            Card reserveTarget = findBestReservableCard(state, self);
+            if (reserveTarget != null) {
+                String desc = String.format("Reserve card (Lv%d, %dpts)",
+                        reserveTarget.getLevel(), reserveTarget.getPoints());
+                return new AIAction(ActionType.RESERVE_CARD, reserveTarget,
+                        false, null, desc);
             }
         }
 
-
-        Card target = findClosestCard(state, self);
-        return buildGemRequest(self, target, state.getGemBank());
+        // ── Step 3: take gems ───────────────────────────────────────
+        List<Card> targets = findTopTargetCards(state, self, GEM_TARGET_COUNT);
+        return buildGemRequest(self, targets, state.getGemBank());
     }
 
     /**
-     * Picks the first claimable noble from the list. No scoring or
-     * comparison is performed — this is the simplest possible selection.
-     *
-     * @param claimable list of nobles the player is eligible to claim
-     * @param state     current game state (unused by Easy AI)
-     * @param self      the AI's Player entity (unused by Easy AI)
-     * @return the first Noble in the claimable list
+     * choose the first noble
+     * 
+     * @param claimable the list of noble that are claiamble
+     * @param state the current gamestate
+     * @param self the AI player
+     * @return the chosen Noble
      */
     @Override
     public Noble chooseNoble(List<Noble> claimable, GameState state, Player self) {
-        return claimable.get(0);
+        return claimable.getFirst();
     }
 
     /**
-     * chooses which gem to return when the AI exceeds 10 gems
-     * repeatedly choose the color that the AI holds the most of and returns 
-     * as many as needed , until excessCount = 0
-     * 
-     * uses a simulated copy of the player's gem count so the real 
-     * Player is not mutated during selection
+     * Returns gems the AI does not need for its current target cards.
+     * Falls back to most-held color if everything is needed.
      * 
      * @param self the AI player
-     * @param excessCount number of gems needed to be returned
-     * @param state current game state 
-     * @return a GemCollection of exactly excessCount gem to return
+     * @param excessCount the extra gems needed to be returned
+     * @param state the current gamestate
+     * @return a GemCollection of what to return
      */
     @Override
     public GemCollection chooseGemsToReturn(Player self, int excessCount, GameState state) {
-        Map<GemColor, Integer> simulated = new EnumMap<>(GemColor.class);
-        for(GemColor color : GemColor.values()){
-            int count = self.getGems().getCount(color);
-            if (count > 0) {
-                simulated.put(color, count);
-            }
-        }
+        // compute combined deficit across top targets, get colors NEED
+        List<Card> targets = findTopTargetCards(state, self, GEM_TARGET_COUNT);
+        Map<GemColor, Integer> need = combinedDeficit(self, targets);
+
+        // Build a mutable snapshot of the player's gems
+        Map<GemColor, Integer> held = snapshotGems(self);
 
         GemCollection toReturn = new GemCollection();
         int remaining = excessCount;
 
-        while(remaining > 0){
-            GemColor best = findMostHeldColour(simulated);
-            if(best == null) break;
-
-            int available = simulated.getOrDefault(best, 0);
-            int amount = Math.min(remaining, available);
-
-            toReturn = toReturn.add(best, amount);
-            remaining -= amount;
-
-            //remove the simulated gems in the player hand
-            int newCount = available - amount;
-            if (newCount <= 0) {
-                simulated.remove(best);
-            } else {
-                simulated.put(best, newCount);
-            }
+        // Pass 1: return gems we do NOT need (least-needed first)
+        List<GemColor> unneeded = new ArrayList<>();
+        for (GemColor c : held.keySet()) {
+            if (c == GemColor.GOLD) continue;
+            if (!need.containsKey(c) || need.get(c) <= 0) unneeded.add(c);
         }
 
+        // Sort unneeded by descending count so we shed the biggest pile first
+        unneeded.sort((a, b) -> held.getOrDefault(b, 0) - held.getOrDefault(a, 0));
+
+        for (GemColor c : unneeded) {
+            if (remaining <= 0) break;
+            int give = Math.min(remaining, held.getOrDefault(c, 0));
+            if (give <= 0) continue;
+            toReturn = toReturn.add(c, give);
+            remaining -= give;
+            held.put(c, held.getOrDefault(c, 0) - give);
+        }
+
+        // Pass 2: if still over, return the most-held color (excluding GOLD)
+        while (remaining > 0) {
+            GemColor most = findMostHeldColor(held);
+            if (most == null) break;
+            int give = Math.min(remaining, held.getOrDefault(most, 0));
+            toReturn = toReturn.add(most, give);
+            remaining -= give;
+            held.put(most, held.getOrDefault(most, 0) - give);
+            if (held.get(most) <= 0) held.remove(most);
+        }
         return toReturn;
     }
 
 
-    //private helpers 
 
     /**
-     * tie-break: when two cards are afforable, we want to choose the one with lower cost
+     * Scores a card considering four factors:
+     *   + raw prestige points
+     *   + noble synergy  (does its bonus help us get a noble)
+     *   + engine value   (does its bonus reduce cost of other visible cards)
+     *   − deficit penalty (how many gems are we short)
      * 
-     * @param candidate the card to be compared with
-     * @param current the initial card
-     * @return true if candidate cost less than the current card cost
+     * @param card the card to be evaluated
+     * @param state the current gamestate
+     * @param self the AI player
+     * @return a float value of the overall score of a card (higher is better)
      */
-    private boolean isBetterPurchase(Card candidate, Card current) {
-        if (current == null) return true;
-        if (candidate.getPoints() > current.getPoints()) return true;
-        if (candidate.getPoints() < current.getPoints()) return false;
-
-        return candidate.getCost().getTotalGems() < current.getCost().getTotalGems();
+    private double scoreCard(Card card, GameState state, Player self) {
+        double pts    = card.getPoints() * WEIGHT_POINTS;
+        double noble  = nobleSynergy(card, state, self) * WEIGHT_NOBLE_SYNERGY;
+        double engine = engineValue(card, state, self) * WEIGHT_ENGINE_VALUE;
+        double cost   = CardEvaluator.totalDeficit(self, card) * WEIGHT_DEFICIT_PENALTY;
+        return pts + noble + engine - cost;
     }
 
     /**
-     * finds the best afforable card from the visible market
-     * choose the one with the most points
-     * (tie-break): choose lowest total gem cost
+     * determine how much does this card's bonus color help toward claimable nobles
+     * Returns the count of nobles on the board that still need this color.
+     * 
+     * @param card the card to be evaluated
+     * @param state the current gamestate
+     * @param self the AI player
+     * @return a float value determining how useful is 
+     * this card bonus color for claiming nobles (higher is better)
+     */
+    private double nobleSynergy(Card card, GameState state, Player self) {
+        GemColor bonus = card.getBonus();
+        if (bonus == null || bonus == GemColor.GOLD) return 0;
+
+        int synergy = 0;
+        for (Noble noble : state.getAvailableNobles()) {
+            int required = noble.getRequirements().getOrDefault(bonus, 0);
+            int have     = self.calculateBonuses().getOrDefault(bonus, 0);
+            if (required > have) {
+                synergy++;  // this card helps close the gap
+            }
+        }
+        return synergy;
+    }
+
+    /**
+     * determine ow useful is this card's bonus color for buying other visible cards
+     * Counts how many visible cards list this color in their cost and the
+     * player cannot yet cover it with bonuses alone.
+     * 
+     * @param card the card to be evaluated
+     * @param state the current gamestate
+     * @param self the AI player
+     * @return a float value determining how useful is 
+     * this card bonus color for buying other visible cards (higher is better)
+     */
+    private double engineValue(Card card, GameState state, Player self) {
+        GemColor bonus = card.getBonus();
+        if (bonus == null || bonus == GemColor.GOLD) return 0;
+
+        int count = 0;
+        for (int level = 1; level <= 3; level++) {
+            for (Card c : state.getMarket().getVisibleCards(level)) {
+                if (c == null || c.equals(card)) continue;
+                int costInColor = c.getCost().getRequired(bonus);  
+                int covered     = self.calculateBonuses().getOrDefault(bonus, 0);
+                if (costInColor > covered) count++;
+            }
+        }
+        return count;
+    }
+
+
+    /**
+     * Finds the best affordable card by composite score.
+     * Considers both visible market cards and reserved hand.
      * 
      * @param state the current gamestate
-     * @param self the AI's player
-     * @return the best afforable card ; null if none are affordable
+     * @param self the AI player
+     * @return the best afforadable card
      */
-    private Card findBestAffordableCard(GameState state, Player self){
+    private Card findBestAffordableCard(GameState state, Player self) {
         List<Card> affordable = CardEvaluator.findAllAffordableCards(state, self);
 
-        Card bestCard = null;
-        for(Card card : affordable){
-            if(isBetterPurchase(card, bestCard)){
-                bestCard = card;
-            }
-        }
-        return bestCard;
-    }
-
-
-    /**
-     * scans all visible market cards for card worth reserving
-     * a card is worth reserving when it has >= 3 points
-     * returns best candidate (highest points, tie-break -> lowest cost)
-     * or null if no card qualifies 
-     * 
-     * @param state the current game state
-     * @return the best reservable card, or null
-     */
-    private Card findBestReservableCard(GameState state){
-        Card bestCard = null;
-        
-        for(int level = 1; level <= 3; level++){
-            List<Card> visibleCards = state.getMarket().getVisibleCards(level);
-            for(Card card : visibleCards){
-                if(card != null && card.getPoints() >= 3){
-                    if(isBetterPurchase(card, bestCard)){
-                        bestCard = card;
-                    }
-                }
-            }
-        }
-        return bestCard;
-    }
-
-    /**
-     * finds all visible card across all visible market with the 
-     * smallest total gem deficit for this player
-     * 
-     * @param state the current game state
-     * @param self the AI player entity
-     * @return the closest card, null if no visible card
-     */
-    private Card findClosestCard(GameState state, Player self){
-        Card closest = null;
-        int smallestDeficit = Integer.MAX_VALUE;
-        for(int level = 1; level <= 3; level++){
-            List<Card> visibleCards = state.getMarket().getVisibleCards(level);
-            for(Card card : visibleCards){
-                int deficit = CardEvaluator.totalDeficit(self, card);
-                if(card != null && deficit < smallestDeficit){
-                    smallestDeficit = deficit;
-                    closest = card;
-                }
-            }
-            
-        }
-        return closest;
-    }
-
-    /**
-     * returns the non-GOLD gemColor the player holds the most from a gem count map
-     * GOLD is skipped as it is the most valuable (joker can replace any gems)
-     * GOLD can max be hold at 5, in a case to return gem, there will always be other colors to return
-     * 
-     * @param gems a mutable map of GemColor to count
-     * @return the most held non GOLD color
-     */
-    private GemColor findMostHeldColour(Map<GemColor, Integer> gems){
-        GemColor best = null;
-        int bestCount = -1;
-
-        for(Map.Entry<GemColor, Integer> entry : gems.entrySet()){
-            GemColor color = entry.getKey();
-            int count = entry.getValue();
-            if(count <= 0 || color == GemColor.GOLD) continue;
-            if (count > bestCount){
-                bestCount = count;
-                best = color;
+        Card best = null;
+        double bestScore = Double.NEGATIVE_INFINITY;
+        for (Card card : affordable) {
+            double score = scoreCard(card, state, self);
+            if (score > bestScore) {
+                bestScore = score;
+                best = card;
             }
         }
         return best;
     }
 
-    
     /**
-     * builds a gem request targeting a specigfic card's deficit
-     * tries these condition in order 
-     *  1. take 3 different gems from the colours with the highest deficit
-     *  2. take 2 of the same color (highest deficit where bank >= 4) 
-     *  3. take any 3 available gems in the bank
-     *  4. take 2 of the same color for any color possible
-     *  5. take whatever individual gem are available
-     *  6. return an empty list if the bank is completely depleted
-     * 
-     * 
-     * @param self the AI's player identity
-     * @param target the card being targeted
-     * @param bank the current gem bank
-     * @return AIAction for gem taking (always return a valid one)
+     * Improved reserve logic — a card is worth reserving when:
+     *   (a) it has high points AND the gold token would close the gap
+     *       (deficit <= 1 after receiving gold), OR
+     *   (b) it is a high-value card (>= RESERVE_MIN_POINTS) worth locking.
+     *
+     * @param state the current gamestate
+     * @param self the AI player
+     * @return the best reservable card
      */
-    private AIAction buildGemRequest(Player self, Card target, GemCollection bank){
-        Map<GemColor, Integer> deficit = CardEvaluator.calculateDeficit(self, target);
+    private Card findBestReservableCard(GameState state, Player self) {
+        Card best = null;
+        double bestScore = Double.NEGATIVE_INFINITY;
 
-        //sort deficit in descending order of needed gems
-        List<GemColor> colorsWithDeficit = new ArrayList<>(deficit.keySet());
-        colorsWithDeficit.sort((a,b) -> deficit.get(b) - deficit.get(a));
-
-        //try 1 : 3 different gems from deficit colors 
-        List<GemColor> pickable = new ArrayList<>();
-        for(GemColor color : colorsWithDeficit){
-            if(bank.getCount(color) >= 1) pickable.add(color);
-            if(pickable.size() == 3) break;
+        // How developed is our engine? Count total bonuses.
+        int totalBonuses = 0;
+        for (GemColor color : GemColor.values()) {
+            if (color == GemColor.GOLD) continue;
+            totalBonuses += self.calculateBonuses().getOrDefault(color, 0);
         }
-        if(pickable.size() == 3){
+
+        for (int level = 1; level <= 3; level++) {
+            for (Card card : state.getMarket().getVisibleCards(level)) {
+                if (card == null) continue;
+
+                int deficit = CardEvaluator.totalDeficit(self, card);
+
+                // (a) Gold closes the gap — always worth it
+                boolean goldCloses = deficit <= 1;
+
+                // (b) High-value lock — only if we have some engine
+                //     and the card is reachable (deficit <= 4)
+                boolean highValue = card.getPoints() >= RESERVE_MIN_POINTS
+                        && totalBonuses >= 2
+                        && deficit <= 4;
+
+                if (!goldCloses && !highValue) continue;
+
+                double score = scoreCard(card, state, self);
+                if (goldCloses) score += 5.0;
+
+                if (score > bestScore) {
+                    bestScore = score;
+                    best = card;
+                }
+            }
+        }
+        return best;
+    }
+
+    /**
+     * Returns the top-n target cards (not yet affordable) sorted by
+     * composite score. Used to guide gem-taking decisions.
+     * 
+     * @param state the current gamestate
+     * @param self the AI player to be evaluated
+     * @param n the number of candidates card we are choosing as a target
+     * @return the list of target cards
+     */
+    private List<Card> findTopTargetCards(GameState state, Player self, int n) {
+        List<Card> candidates = new ArrayList<>();
+
+        // Add all visible market cards
+        for (int level = 1; level <= 3; level++) {
+            for (Card card : state.getMarket().getVisibleCards(level)) {
+                if (card != null) candidates.add(card);
+            }
+        }
+        // Add reserved cards
+        for (Card card : self.getReservedCards()) {
+            if (card != null) candidates.add(card);
+        }
+
+        // Sort by score descending
+        candidates.sort((a, b) -> Double.compare(
+                scoreCard(b, state, self),
+                scoreCard(a, state, self)));
+
+        // Return top-n cards of the deck
+        List<Card> top = new ArrayList<>();
+        for (int i = 0; i < Math.min(n, candidates.size()); i++) {
+            top.add(candidates.get(i));
+        }
+        return top;
+    }
+
+
+    //  Gem-taking logic (multi-target)
+
+    /**
+     * Builds a gem request considering deficits across multiple target cards.
+     * Colors are prioritized by their combined deficit across all targets.
+     *
+     * Tries in order:
+     *  1. Three different gems from highest combined-deficit colors
+     *  2. Two same gems from highest combined-deficit color (bank >= 4)
+     *  3. Three different gems from any available bank color
+     *  4. Two same gems from any available color
+     *  5. Whatever individual gems remain
+     *  6. Empty
+     * 
+     * @param self the AI player to be evaluated
+     * @param targets a list of target cards to be purchased
+     * @param the current gem bank
+     * @return an AIAction to take the gem
+     */
+    private AIAction buildGemRequest(Player self, List<Card> targets, GemCollection bank) {
+        // Aggregate deficits across all targets
+        Map<GemColor, Integer> combined = combinedDeficit(self, targets);
+
+        // Sort colors by descending combined deficit
+        List<GemColor> prioritized = new ArrayList<>(combined.keySet());
+        prioritized.sort((a, b) -> combined.get(b) - combined.get(a));
+
+        // ── Try 1: 3 different gems from deficit colors ─────────────
+        List<GemColor> pickable = new ArrayList<>();
+        for (GemColor color : prioritized) {
+            if (bank.getCount(color) >= 1) pickable.add(color);
+            if (pickable.size() == 3) break;
+        }
+        if (pickable.size() == 3) {
             GemCollection request = new GemCollection();
-            for(GemColor c : pickable) request = request.add(c, 1); //GemCollection is immutable
-            if(rules.canTakeThreeDifferentGems(request, bank)){
-                return new AIAction(ActionType.TAKE_THREE_DIFFERENT, null, false, request, 
-                String.format("Take 3 different: %s", pickable));
+            for (GemColor c : pickable) request = request.add(c, 1);
+            if (rules.canTakeThreeDifferentGems(request, bank)) {
+                return new AIAction(ActionType.TAKE_THREE_DIFFERENT, null, false, request,
+                        String.format("Take 3 different (targeted): %s", pickable));
             }
         }
 
-        //try 2 : 2 same gems from highest deficit colors where bank >= 4
-        for(GemColor color : colorsWithDeficit){
-            if(rules.canTakeTwoSameGems(color, bank)){
+        // ── Try 2: 2 same gems from highest deficit (bank >= 4) ─────
+        for (GemColor color : prioritized) {
+            if (rules.canTakeTwoSameGems(color, bank)) {
                 GemCollection request = new GemCollection().add(color, 2);
                 return new AIAction(ActionType.TAKE_TWO_SAME, null, false, request,
-                String.format("Take 2 %s gems", color));
+                        String.format("Take 2 %s gems (targeted)", color));
             }
         }
 
-        //try 3 : any 3 different gems from bank
+        // ── Try 3: any 3 different gems from bank ───────────────────
         List<GemColor> available = new ArrayList<>();
-        for(GemColor color : GemColor.values()){
-            if(color == GemColor.GOLD) continue;
-            if(bank.getCount(color) >= 1) available.add(color);
-            if(available.size() == 3) break;
+        for (GemColor color : GemColor.values()) {
+            if (color == GemColor.GOLD) continue;
+            if (bank.getCount(color) >= 1) available.add(color);
+            if (available.size() == 3) break;
         }
-        if(available.size() == 3){
-
+        if (available.size() == 3) {
             GemCollection request = new GemCollection();
             for (GemColor c : available) request = request.add(c, 1);
             if (rules.canTakeThreeDifferentGems(request, bank)) {
                 return new AIAction(ActionType.TAKE_THREE_DIFFERENT, null, false, request,
-                    String.format("Take 3 different (fallback): %s", available));
+                        String.format("Take 3 different (fallback): %s", available));
             }
         }
 
-        //try 4 : any 2 same
+        // ── Try 4: any 2 same ───────────────────────────────────────
         for (GemColor color : GemColor.values()) {
             if (color == GemColor.GOLD) continue;
             if (rules.canTakeTwoSameGems(color, bank)) {
                 GemCollection request = new GemCollection().add(color, 2);
                 return new AIAction(ActionType.TAKE_TWO_SAME, null, false, request,
-                    String.format("Take 2 %s gems", color));
+                        String.format("Take 2 %s gems (fallback)", color));
             }
         }
 
-        //try 5 : whatever gems are available (up to three)
+        // ── Try 5: whatever individual gems remain ──────────────────
         GemCollection request = new GemCollection();
         List<GemColor> taken = new ArrayList<>();
-        for (GemColor color : GemColor.values()){
+        for (GemColor color : GemColor.values()) {
             if (color == GemColor.GOLD) continue;
             if (bank.getCount(color) >= 1) {
                 request = request.add(color, 1);
@@ -320,15 +423,73 @@ public class EasyAIStrategy implements AIStrategy {
             }
             if (taken.size() == 3) break;
         }
-
         if (!taken.isEmpty()) {
             return new AIAction(ActionType.TAKE_THREE_DIFFERENT, null, false, request,
-                String.format("Take %d gem(s) (last resort): %s", taken.size(), taken));
+                    String.format("Take %d gem(s) (last resort): %s", taken.size(), taken));
         }
 
-        //bank completely empty - should not be a common occurence
+        // ── Try 6: bank empty ───────────────────────────────────────
         return new AIAction(ActionType.TAKE_THREE_DIFFERENT, null, false,
-            new GemCollection(), "No gems available");
+                new GemCollection(), "No gems available");
+    }
 
+
+    //helpers
+
+    /**
+     * Aggregates the gem deficit across multiple target cards.
+     * For each non-GOLD color, sums how many more gems the player needs
+     * across all targets. This guides gem selection toward colors that
+     * help the most cards simultaneously.
+     * 
+     * @param self the AI player
+     * @param targets the list of targeted cards
+     * @returns a map of deficit of each color across multiple target cards
+     */
+    private Map<GemColor, Integer> combinedDeficit(Player self, List<Card> targets) {
+        Map<GemColor, Integer> combined = new EnumMap<>(GemColor.class);
+        for (Card card : targets) {
+            Map<GemColor, Integer> deficit = CardEvaluator.calculateDeficit(self, card);
+            for (Map.Entry<GemColor, Integer> entry : deficit.entrySet()) {
+                combined.merge(entry.getKey(), entry.getValue(), Integer::sum);
+            }
+        }
+        return combined;
+    }
+
+
+    /** recreate the player's gem counts into a mutable map (excludes zero counts). 
+     *  a helper for gem return logic
+     * 
+     * @param self the AI player self
+     * @return a map of the player's gem count
+    */
+    private Map<GemColor, Integer> snapshotGems(Player self) {
+        Map<GemColor, Integer> snapshot = new EnumMap<>(GemColor.class);
+        for (GemColor color : GemColor.values()) {
+            int count = self.getGems().getCount(color);
+            if (count > 0) snapshot.put(color, count);
+        }
+        return snapshot;
+    }
+
+
+    /** Returns the non-GOLD color with the highest count in the map. 
+     * 
+     * @param gems a map of current held gems
+     * @return the most held color in that map
+    */
+    private GemColor findMostHeldColor(Map<GemColor, Integer> gems) {
+        GemColor best = null;
+        int bestCount = -1;
+        for (Map.Entry<GemColor, Integer> entry : gems.entrySet()) {
+            if (entry.getKey() == GemColor.GOLD) continue;
+            if (entry.getValue() > bestCount) {
+                bestCount = entry.getValue();
+                best = entry.getKey();
+            }
+        }
+
+        return best;
     }
 }
